objects/SurveyMonkeyResp__c.object
<CustomObject>
    <fields>
        <fullName>Choice_Id__c</fullName>
        <label>Choice Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RespondentID__c</fullName>
        <label>RespondentID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SM_Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SM Answer</label>
        <referenceTo>SM_Answer__c</referenceTo>
        <relationshipLabel>SurveyMonkeyResps</relationshipLabel>
        <relationshipName>SurveyMonkeyResps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SM_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SM Question</label>
        <referenceTo>SM_Question__c</referenceTo>
        <relationshipLabel>SurveyMonkeyResps</relationshipLabel>
        <relationshipName>SurveyMonkeyResps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyID__c</fullName>
        <label>SurveyID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>question_Id__c</fullName>
        <label>question Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SurveyMonkeyResp</label>
    <nameField>
        <label>SurveyMonkeyResp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyMonkeyResps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>